src/objects/DSCORGPKG__DiscoverOrgResults__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Employees__c</fullName>
        <label>Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>DiscoverOrg Result</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>DiscoverOrg Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>